--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,12 @@ homepage = "https://github.com/ndornseif/fastmath"
 readme = "README.md"
 
 [dependencies]
+
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+paste = "1.0.15"
+
+[[bench]]
+name = "sign_bench"
+harness = false
